[gd_scene load_steps=71 format=2]

[ext_resource path="res://Sprites/Planets/red_lava/1.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Planets/red_lava/2.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Planets/red_lava/3.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Planets/red_lava/6.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Planets/red_lava/35.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Planets/red_lava/36.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Planets/red_lava/14.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Planets/red_lava/15.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Planets/red_lava/16.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Planets/red_lava/4.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Planets/red_lava/30.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Planets/red_lava/31.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Planets/red_lava/32.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Planets/red_lava/33.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Planets/red_lava/34.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Planets/red_lava/11.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Planets/red_lava/25.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Planets/red_lava/26.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Planets/red_lava/27.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Planets/red_lava/28.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Planets/red_lava/29.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Planets/red_lava/17.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Planets/red_lava/18.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Planets/red_lava/19.png" type="Texture" id=24]
[ext_resource path="res://Sprites/Planets/red_lava/20.png" type="Texture" id=25]
[ext_resource path="res://Sprites/Planets/red_lava/21.png" type="Texture" id=26]
[ext_resource path="res://Sprites/Planets/red_lava/22.png" type="Texture" id=27]
[ext_resource path="res://Sprites/Planets/red_lava/23.png" type="Texture" id=28]
[ext_resource path="res://Sprites/Planets/red_lava/24.png" type="Texture" id=29]
[ext_resource path="res://Sprites/Planets/red_lava/12.png" type="Texture" id=30]
[ext_resource path="res://Sprites/Planets/red_lava/13.png" type="Texture" id=31]
[ext_resource path="res://Sprites/Planets/red_lava/55.png" type="Texture" id=32]
[ext_resource path="res://Sprites/Planets/red_lava/56.png" type="Texture" id=33]
[ext_resource path="res://Sprites/Planets/red_lava/57.png" type="Texture" id=34]
[ext_resource path="res://Sprites/Planets/red_lava/58.png" type="Texture" id=35]
[ext_resource path="res://Sprites/Planets/red_lava/59.png" type="Texture" id=36]
[ext_resource path="res://Sprites/Planets/red_lava/60.png" type="Texture" id=37]
[ext_resource path="res://Sprites/Planets/red_lava/9.png" type="Texture" id=38]
[ext_resource path="res://Sprites/Planets/red_lava/10.png" type="Texture" id=39]
[ext_resource path="res://Sprites/Planets/red_lava/5.png" type="Texture" id=40]
[ext_resource path="res://Sprites/Planets/red_lava/7.png" type="Texture" id=41]
[ext_resource path="res://Sprites/Planets/red_lava/8.png" type="Texture" id=42]
[ext_resource path="res://Sprites/Planets/red_lava/37.png" type="Texture" id=43]
[ext_resource path="res://Sprites/Planets/red_lava/38.png" type="Texture" id=44]
[ext_resource path="res://Sprites/Planets/red_lava/39.png" type="Texture" id=45]
[ext_resource path="res://Sprites/Planets/red_lava/40.png" type="Texture" id=46]
[ext_resource path="res://Sprites/Planets/red_lava/41.png" type="Texture" id=47]
[ext_resource path="res://Sprites/Planets/red_lava/42.png" type="Texture" id=48]
[ext_resource path="res://Sprites/Planets/red_lava/43.png" type="Texture" id=49]
[ext_resource path="res://Sprites/Planets/red_lava/44.png" type="Texture" id=50]
[ext_resource path="res://Sprites/Planets/red_lava/45.png" type="Texture" id=51]
[ext_resource path="res://Sprites/Planets/red_lava/46.png" type="Texture" id=52]
[ext_resource path="res://Sprites/Planets/red_lava/47.png" type="Texture" id=53]
[ext_resource path="res://Sprites/Planets/red_lava/48.png" type="Texture" id=54]
[ext_resource path="res://Sprites/Planets/red_lava/49.png" type="Texture" id=55]
[ext_resource path="res://Sprites/Planets/red_lava/50.png" type="Texture" id=56]
[ext_resource path="res://Sprites/Planets/red_lava/51.png" type="Texture" id=57]
[ext_resource path="res://Sprites/Planets/red_lava/52.png" type="Texture" id=58]
[ext_resource path="res://Sprites/Planets/red_lava/53.png" type="Texture" id=59]
[ext_resource path="res://Sprites/Planets/red_lava/54.png" type="Texture" id=60]
[ext_resource path="res://Scenes/Utility/HurtBox.tscn" type="PackedScene" id=61]
[ext_resource path="res://Scenes/Utility/HitBox.tscn" type="PackedScene" id=62]
[ext_resource path="res://Scripts/Loot/loot_planet_lava.gd" type="Script" id=63]
[ext_resource path="res://Audio/SFX/ArcadeExplosion.wav" type="AudioStream" id=64]

[sub_resource type="CircleShape2D" id=2]
radius = 27.6687

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 10 ), ExtResource( 40 ), ExtResource( 4 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 16 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 26.0192

[sub_resource type="CircleShape2D" id=4]
radius = 26.0192

[sub_resource type="CircleShape2D" id=5]
radius = 26.8742

[sub_resource type="CircleShape2D" id=6]
radius = 26.6687

[node name="KinematicBody2D" type="KinematicBody2D"]
scale = Vector2( 3, 3 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 63 )

[node name="PlanetHurtBox" parent="." instance=ExtResource( 61 )]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D2" type="CollisionShape2D" parent="PlanetHurtBox"]
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 33
playing = true

[node name="HitBox" parent="." instance=ExtResource( 62 )]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 3 )

[node name="collision_shape" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 4 )

[node name="BulletCollision" type="StaticBody2D" parent="." groups=["enemy"]]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletCollision"]
position = Vector2( 0, -0.666666 )
shape = SubResource( 5 )

[node name="BulletCollisionArea" type="Area2D" parent="." groups=["enemy"]]
position = Vector2( -210, -32 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletCollisionArea"]
position = Vector2( 210, 32 )
shape = SubResource( 6 )

[node name="DeathExplosionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 64 )
volume_db = -15.0
bus = "SFX"

[connection signal="area_entered" from="PlanetHurtBox" to="PlanetHurtBox" method="_on_PlanetHurtBox_area_entered"]
[connection signal="hurt" from="PlanetHurtBox" to="." method="_on_HurtBox_hurt"]
